Revisited Lab 1 (Added name)

--- a/lab-01-hello-r.html
+++ b/lab-01-hello-r.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Insert your name here" />
+<meta name="author" content="Graham Overheu" />
 
 
 <title>Lab 01 - Hello R</title>
@@ -368,8 +368,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Lab 01 - Hello R</h1>
-<h4 class="author">Insert your name here</h4>
-<h4 class="date">Insert date here</h4>
+<h4 class="author">Graham Overheu</h4>
+<h4 class="date">Jan 22</h4>
 
 </div>
 
@@ -435,9 +435,6 @@ negative, as shown by an r value of -0.07.</p>
 </div>
 <div id="exercise-5" class="section level3">
 <h3>Exercise 5</h3>
-<p>This is your final exercise! Add code and narrative as needed. Be
-creative and show off what you’ve learned so far. Add code and narrative
-as needed.</p>
 <pre class="r"><code>ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset)) +
   geom_point() +
   facet_wrap(~dataset, ncol = 3) +
@@ -467,9 +464,6 @@ as needed.</p>
 ## # ℹ 1 more
 ## #   variable:
 ## #   r &lt;dbl&gt;</code></pre>
-<p>To add additional R chunks, you can either type the backticks, curly
-braces, and the letter <code>r</code>, or use the “Insert Chunk” button
-above (the green C+ icon). Have fun!</p>
 </div>
 </div>
 
